# MCPServer

./: .env.example  .gitignore  DEPLOYMENT_COMPARISON.md  INSTALLATION_TROUBLESHOOTING.md  MCP_SERVER_EXPLANATION.md  MCP_SETUP_GUIDE.md  README.md  SETUP.md  TESTING_GUIDE.md  __main__.py  all_functions.py  check_mcp_modules.py  check_stdio.py  config.py  config_templates.py  copy_artifacts.sh  diagnose_imports.py  diagnose_mcp_issue.py  doc_templates.py  documentation_plan.md  fix_summary.md  google_search_fix_summary.md  index.py  integration_guide.md  main.py  mcp_final.py  mcp_project_structure.md  mcp_run.py  mcp_server_final.py  mcp_server_simple.py  mcp_start.py  mcp_stdio_server.py  organize_project.py  project_templates.py  pyproject.toml  requirements.txt  run_mcp_server.py  run_mcp_server_alt.py  run_mcp_stdio.py  run_server.py  (+7 more)
aws-deployment/: AWS_DEPLOYMENT_GUIDE.md  deploy.sh  samconfig.toml
aws-deployment/cloudformation/: mcp-infrastructure.yaml  parameters-dev.json  parameters-prod.json  parameters-staging.json
aws-deployment/examples/: client.js  client.py  test_api.sh
aws-deployment/scripts/: cleanup.sh  setup_environment.sh
aws-deployment/src/: config.py  lambda_handlers.py  specialized_handlers.py
aws-deployment/src/handlers/: amazon.py  documents.py  odoo.py  storage.py  weather.py
aws-deployment/src/schemas/: tool_schemas.py
aws-deployment/src/services/: amazon_service.py  odoo_service.py  utilities_service.py  weather_service.py  web_service.py
aws-deployment/src/utils/: text_processing.py
change_logs/: ISSUE_RESOLUTION_SUMMARY.md  README.md  cleanup_summary.md  fix_summary_updated.md  function_rename_summary.md
docs/: API_REFERENCE.md  CHANGELOG.md  README.md  TROUBLESHOOTING.md  contributing.md  getting-started.md
docs/api-reference/: README.md  amazon.md  documents.md  odoo.md  slack.md  storage.md  utilities.md  weather.md  web-browsing.md
docs/guides/: README.md  adding-new-tools.md  deployment.md  python-client-usage.md  security-best-practices.md
handlers/: slack_integration.py  utilities.py  weather.py  web_browsing.py
schemas/: tool_schemas.py
services/: document_service.py  slack_service.py  storage_service.py  utilities_service.py
tests/: test_config_fix.py  test_fixes.py  test_mcp_diagnostics.py  test_mcp_server.py  test_mcp_stdio.py  test_minimal_mcp.py
utils/: formatting.py  text_processing.py  validation.py
