[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-office-assistant"
version = "1.0.0"
description = "MCP Server for Office Assistant Functions"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Office Assistant", email = "admin@example.com"}
]
license = {text = "MIT"}
keywords = ["mcp", "office", "assistant", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.9.0",
    "boto3>=1.26.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.11.0",
    "weaviate-client>=3.15.0",
    "openai>=1.0.0",
    "fpdf==1.7.2",
    "markdown2>=2.4.0",
    "nltk>=3.8.0",
    "lxml>=4.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "flake8>=5.0.0",
]

[project.scripts]
mcp-office-assistant = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["handlers*", "services*", "schemas*", "utils*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*", 
    "weaviate.*",
    "fpdf.*",
    "markdown2.*",
    "nltk.*",
    "beautifulsoup4.*",
    "bs4.*"
]
ignore_missing_imports = true